# toad

./: .gitignore  .gitlab-ci.yml  20250513_chunk_size_performance.pkl  BranchWorkingNotes.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_ATTRIBUTION.md  LICENSE.txt  README.md  Sandbox.ipynb  _VERSION  asdetect.prof  asdetect_numba.prof  asdetect_prenumba.prof  benchmark_results.csv  benchmark_results_.csv  chunk_size_performance.pkl  chunk_size_performance.py  dask_tutorial.ipynb  demo.ipynb  no_healpy.ipynb  notes-n-sandbox.ipynb  ov_optimization.ipynb  profiler_asdetect.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements_sphinx.txt  sandbox.ipynb  sandbox_SW.ipynb  setup.py  time_sw.py
.github/ISSUE_TEMPLATE/: bug_report.md  general-issue.md
.github/workflows/: build_and_tests.yml  create-draft-release.yml  package-test.yml  pages.yml  publish-to-pypi.yml  pytest.yml  python-package.yml  python-packages.yml  ruff.yml  ruff_and_tests.yml
20250611_htmlcov/: class_index.html  function_index.html  index.html  status.json  z_163c88dd417684e3___init___py.html  z_1eb65d70bf74a7db___init___py.html  z_1eb65d70bf74a7db_cluster_general_stats_py.html  z_1eb65d70bf74a7db_cluster_space_stats_py.html  z_1eb65d70bf74a7db_cluster_stats_py.html  z_1eb65d70bf74a7db_cluster_time_stats_py.html  z_32c144918dd749cc___init___py.html  z_32c144918dd749cc_toad_plotter_py.html  z_3e0effc0c2914c8e___init___py.html  z_3e0effc0c2914c8e__version_py.html  z_3e0effc0c2914c8e_core_py.html  z_3e0effc0c2914c8e_preprocessing_py.html  z_47f0b3e1cbfadfe3___init___py.html  z_47f0b3e1cbfadfe3_synthetic_data_py.html  z_863a782d0bda9c44___init___py.html  z_863a782d0bda9c44_base_py.html  z_863a782d0bda9c44_healpix_toad_py.html  z_992492ea07186b29___init___py.html  z_992492ea07186b29_asdetect_py.html  z_992492ea07186b29_base_py.html  z_c414ad438520e0f1___init___py.html  z_c414ad438520e0f1_prepare_data_py.html  z_d6e26c9bb68496f3___init___py.html  z_d6e26c9bb68496f3_aggregation_py.html
20250616_htmlcov/: class_index.html  function_index.html  index.html  status.json  z_163c88dd417684e3___init___py.html  z_1eb65d70bf74a7db___init___py.html  z_1eb65d70bf74a7db_cluster_general_stats_py.html  z_1eb65d70bf74a7db_cluster_space_stats_py.html  z_1eb65d70bf74a7db_cluster_stats_py.html  z_1eb65d70bf74a7db_cluster_time_stats_py.html  z_32c144918dd749cc___init___py.html  z_32c144918dd749cc_toad_plotter_py.html  z_3e0effc0c2914c8e___init___py.html  z_3e0effc0c2914c8e__version_py.html  z_3e0effc0c2914c8e_core_py.html  z_3e0effc0c2914c8e_preprocessing_py.html  z_47f0b3e1cbfadfe3___init___py.html  z_47f0b3e1cbfadfe3_synthetic_data_py.html  z_863a782d0bda9c44___init___py.html  z_863a782d0bda9c44_base_py.html  z_863a782d0bda9c44_healpix_toad_py.html  z_992492ea07186b29___init___py.html  z_992492ea07186b29_asdetect_py.html  z_992492ea07186b29_base_py.html  z_c414ad438520e0f1___init___py.html  z_c414ad438520e0f1_prepare_data_py.html  z_d6e26c9bb68496f3___init___py.html  z_d6e26c9bb68496f3_aggregation_py.html
20250618_htmlcov/: class_index.html  function_index.html  index.html  status.json  z_163c88dd417684e3___init___py.html  z_1eb65d70bf74a7db___init___py.html  z_1eb65d70bf74a7db_cluster_general_stats_py.html  z_1eb65d70bf74a7db_cluster_space_stats_py.html  z_1eb65d70bf74a7db_cluster_stats_py.html  z_1eb65d70bf74a7db_cluster_time_stats_py.html  z_32c144918dd749cc___init___py.html  z_32c144918dd749cc_toad_plotter_py.html  z_3e0effc0c2914c8e___init___py.html  z_3e0effc0c2914c8e__version_py.html  z_3e0effc0c2914c8e_core_py.html  z_3e0effc0c2914c8e_preprocessing_py.html  z_47f0b3e1cbfadfe3___init___py.html  z_47f0b3e1cbfadfe3_synthetic_data_py.html  z_863a782d0bda9c44___init___py.html  z_863a782d0bda9c44_base_py.html  z_863a782d0bda9c44_healpix_toad_py.html  z_992492ea07186b29___init___py.html  z_992492ea07186b29_asdetect_py.html  z_992492ea07186b29_base_py.html  z_c414ad438520e0f1___init___py.html  z_d6e26c9bb68496f3___init___py.html  z_d6e26c9bb68496f3_aggregation_py.html
dask_performance_analysis/: 20250603_chunk_size_performance_synth_small.pkl  20250604_chunk_size_performance_real.pkl  20250604_chunk_size_performance_synth.pkl  20250605_chunk_size_performance_real.pkl  20250605_chunk_size_performance_synth.pkl  chunk_size_justplot.py  chunk_size_performance_real.py  chunk_size_performance_synth.py  compare_shifts.py  generate_dask_data.py
data_time/: KLdiv_vals_ov-0o0-0o5.csv  sw_time_01.csv  sw_time_02.csv  sw_time_03.csv  sw_time_04.csv  sw_time_05.csv  sw_time_06.csv  sw_time_09.csv  sw_time_10.csv  sw_time_11.csv  sw_time_12.csv
doc/: Makefile
doc/source/: api_doc.rst  api_ref.rst  conf.py  getting_started.rst  index.rst  quick_start.md  references.rst  sidebar_main_nav_links.rst  sitemap.rst  toad.rst  tutorials.rst
docs/: Makefile  README.md  api_ref.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quick_start.html  release_notes.html  scientific_ref.html  search.html  searchindex.js  sidebar_main_nav_links.html  tutorials.html
docs/_sources/: quick_start.rst.txt  release_notes.rst.txt
docs/_static/: custom.css
docs/source/: api_ref.rst  conf.py  index.rst  installation.rst  package_overview.rst  quick_start.md  release_notes.rst  scientific_ref.rst  sidebar_main_nav_links.rst  tutorials.rst
docs/tutorials/: basics.html  custom_clustering.html  custom_shifts_detection.html  optimization.html
docs_sphinx/source/: index.rst  usage.rst
examples/: clustering_methods.ipynb  shift_detection_methods.ipynb
sphinx/: .gitlab-ci.yml
sphinx/source/: api.rst  conf.py  index.rst  usage.rst  (+3 more)
tests/: test_core.py
toad/: Sandbox.ipynb  __init__.py  _warnings.py  core.py  preprocessing.py  ruff_action_test1.py  ruff_action_test2.py  sandbox.ipynb
toad_lab/: __init__.py  core.py  method_dictionary.py  preprocessing.py
tutorials/: aggregation.ipynb  basics.ipynb  cluster_regridding.ipynb  clustering_methods.ipynb  custom_shifts_detection.ipynb  kobe_scoring_dev.ipynb  optimisation.ipynb  optimization.ipynb  parallelization_dask.ipynb  shift_detection_methods.ipynb
(+114 files in other folders)
