# toml-file started Feb 2025 by Lukas Röhrich
#
# This file acts as aconfiguration file for the toad packages
# by Potsdam Institute for Climate Impact Research, GER
#
# Tutorial on how to setup this config file:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# choose build-backend
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    ]

# basic metadata
[project]
name = "toad"
dynamic = ["version",]
description = "Tipping and Other Abrupt events Detector"
readme = "README.md"
keywords = ["tipping", "tipping points", "climate"]
authors = [
    {name = "Sina Loriani", email = "sina.loriani@pik-potsdam.de"}
]
maintainers = [
    {name = "Jakob Harteg", email = "jakob.harteg@pik-potsdam.de"}
]
classifiers = [
    "Topic :: Scientific :: Climate",
    "Intended Audience :: Climate Scientists",
    "Programming Language :: Python",
]

dependencies = [
        "numpy", # set to =2.0.0 when we add numba
        "matplotlib",
        "scipy",
        "scikit-learn",
        "xarray",
        "netcdf4",          # pipreqs didn't find this, but needed for xarray as optional dep to read *.nc files
        "cartopy",
        "healpy",
        "pandas",
        "fast-hdbscan",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "toad._version.__version__"}

[tool.deptry.per_rule_ignores]
DEP002 = ["netcdf4"]            # ignore unused dependencies

# suppress warning about assuming corresponding module name
[tool.deptry.package_module_name_map]
numpy = "numpy"
matplotlib = "matplotlib"
scipy = "scipy"
xarray = "xarray"
netcdf4 = "netcdf4"
cartopy = "cartopy"
healpy = "healpy"
pandas = "pandas"
fast-hdbscan = "fast_hdbscan"
scikit-learn = "sklearn"

[project.urls]
Homepage = "https://tipmip.pik-potsdam.de/"
Documentation = "https://www.pik-potsdam.de/~lukasro/toad/#"
Repository = "https://github.com/tipmip-methods/toad"