# toml-file started Feb 2025 by Lukas Röhrich
#
# This file acts as aconfiguration file for the toad packages
# by Potsdam Institute for Climate Impact Research, GER
#
# Tutorial on how to setup this config file:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# choose build-backend
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    ]

# basic metadata
[project]
name = "toad"
dynamic = ["version",]
description = "Tipping and Other Abrupt events Detector"
readme = "README.md"
keywords = ["tipping", "tipping points", "climate"]
authors = [
    {name = "Sina Loriani", email = "sina.loriani@pik-potsdam.de"},
    {name = "Jakob Harteg", email = "jakob.harteg@pik-potsdam.de"}
]
maintainers = [
    {name = "Jakob Harteg", email = "jakob.harteg@pik-potsdam.de"}
]
classifiers = [
    "Topic :: Scientific :: Climate",
    "Intended Audience :: Climate Scientists",
    "Programming Language :: Python",
]

dependencies = [
    "numpy>=2.2.0,<2.3.0",  # Pin to NumPy 2.2.x to ensure consistent BLAS/LAPACK implementation across platforms
    "matplotlib",
    "scipy>=1.15.0,<1.17.0",  # Python 3.10 gets 1.15.x, Python 3.11+ gets 1.16.x
    "scikit-learn>=1.7.1,<1.8.0",  # Pin to scikit-learn 1.7.x for consistent HDBSCAN clustering results
    "xarray",
    "netcdf4",          # pipreqs didn't find this, but needed for xarray as optional dep to read *.nc files
    "cartopy",
    "pandas",
    "numba",
    "healpix",
    "optuna",
    "cftime"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "deptry",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "toad._version.__version__"}

[tool.deptry.per_rule_ignores]
DEP002 = ["netcdf4", "pre-commit", "ruff", "pytest", "pytest-cov", "deptry"]  # ignore unused dependencies and dev tools

[tool.deptry]
ignore_notebooks = true

# suppress warning about assuming corresponding module name
[tool.deptry.package_module_name_map]
numpy = "numpy"
matplotlib = "matplotlib"
scipy = "scipy"
xarray = "xarray"
netcdf4 = "netcdf4"
cartopy = "cartopy"
pandas = "pandas"
scikit-learn = "sklearn"
numba = "numba"
healpix = "healpix"
optuna = "optuna"
cftime = "cftime"

[project.urls]
Homepage = "https://tipmip.pik-potsdam.de/"
Documentation = "https://www.pik-potsdam.de/~lukasro/toad/#"
Repository = "https://github.com/tipmip-methods/toad"