# toml-file started Feb 2025 by Lukas Röhrich
#
# This file acts as a configuration file for the toad package
# by Potsdam Institute for Climate Impact Research, GER
#
# Tutorial on how to setup this config file:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# choose build-backend
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

# basic metadata
[project]
name = "tipmip-toad"
dynamic = ["version"]
description = "Tipping and Other Abrupt events Detector"
readme = "README.md"
keywords = ["tipping", "tipping points", "climate", "abrupt shifts", "earth system"]
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    {name = "Jakob Harteg", email = "jakob.harteg@pik-potsdam.de"},
    {name = "Lukas Roehrich", email = "lukas.roehrich@pik-potsdam.de"},
    {name = "Sina Loriani", email = "sina.loriani@pik-potsdam.de"}
]
maintainers = [
    {name = "Jakob Harteg", email = "jakob.harteg@pik-potsdam.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.2.0,<2.3.0",  # Pin to NumPy 2.2.x to ensure consistent BLAS/LAPACK implementation across platforms
    "matplotlib",
    "scipy>=1.15.0,<1.17.0",  # Python 3.10 gets 1.15.x, Python 3.11+ gets 1.16.x
    "scikit-learn>=1.7.1,<1.8.0",  # Pin to scikit-learn 1.7.x for consistent HDBSCAN clustering results
    "xarray",
    "netcdf4",          # pipreqs didn't find this, but needed for xarray as optional dep to read *.nc files
    "cartopy",
    "pandas",
    "numba",
    "healpix",
    "optuna",
    "cftime",
    "joblib",
    "tqdm-joblib"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "deptry",
]

[project.urls]
Homepage = "https://tipmip.pik-potsdam.de/"
Repository = "https://github.com/tipmip-methods/toad"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
toad = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "toad._version.__version__"}

[tool.deptry.per_rule_ignores]
DEP002 = ["netcdf4", "pre-commit", "ruff", "pytest", "pytest-cov", "deptry"]

[tool.deptry]
ignore_notebooks = true

# suppress warning about assuming corresponding module name
[tool.deptry.package_module_name_map]
numpy = "numpy"
matplotlib = "matplotlib"
scipy = "scipy"
xarray = "xarray"
netcdf4 = "netcdf4"
cartopy = "cartopy"
pandas = "pandas"
scikit-learn = "sklearn"
numba = "numba"
healpix = "healpix"
optuna = "optuna"
cftime = "cftime"
joblib = "joblib"
tqdm-joblib = "tqdm_joblib"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "build/",
    "build/lib/",
    "toad.egg-info/",
    "docs/",
    "tutorials/",
    "test_artifacts/",
    ".*",
]